--- a/_posts/2012-12-01-welding.md
+++ b/_posts/2012-12-01-welding.md
@@ -2,15 +2,15 @@
 layout: page
 page_id: welding
 title: Welding Services
-description: We provide the best welding services ever.
+description: We earnestly interested in helping you solve your welding problems.
 images: 
-  - welding/tig_welder.jpg
-  - welding/mig_welder.jpg
-  - welding/ortho_welder.jpg
-  - welding/tig_welder.jpg
+  - welding/welding_one.JPG
+  - welding/welding_two.JPG
 ---
 
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+We offer quality welding with a Mig Welder and Argon gas for clean
+joints. Give us the plans, detailed drawings, or a clear picture and we
+will help create your vision.
 
 --- 
 {% assign images = page.images %}
