Update layout and content.

--- a/_posts/2012-12-01-plumbing.md
+++ b/_posts/2012-12-01-plumbing.md
@@ -1,14 +1,11 @@
 ---
 layout: page
 page_id: plumbing
-title: Plumbing Services
+title: Plumbing
 description: Regardless if you require our aid or not, we shall always cheerfully do all in our power to serve you promptly.
 images: 
   - plumbing/plumbing_one.JPG
-  - plumbing/plumbing_two.JPG
-  - plumbing/plumbing_three.JPG
 ---
-
 * Free Estimates
 * Drain Snaking
 * Leaks
@@ -19,7 +16,3 @@ images:
 * Sewer Replacement
 * Tenant Improvements
 * Shower Valve Replacement
-
---- 
-{% assign images = page.images %}
-{% include images.html %}
