--- a/_posts/2012-12-01-welding.md
+++ b/_posts/2012-12-01-welding.md
@@ -1,17 +1,11 @@
 ---
 layout: page
 page_id: welding
-title: Welding Services
-description: We earnestly interested in helping you solve your welding problems.
+title: Welding
+description: Give us the plans, detailed drawings, or a general picture and we will help create your vision.
 images: 
-  - welding/welding_one.JPG
-  - welding/welding_two.JPG
+  - welding/welding.JPG
 ---
-
-We offer quality welding with a Mig Welder and Argon gas for clean
-joints. Give us the plans, detailed drawings, or a clear picture and we
-will help create your vision.
-
---- 
-{% assign images = page.images %}
-{% include images.html %}
+* Mig Welding with Argon Gas
+* Clean Welds and Joints
+* Custom Builds From Plans or Drawings
