Add the final images and clean up some wording.

--- a/_posts/2012-12-01-plumbing.md
+++ b/_posts/2012-12-01-plumbing.md
@@ -4,7 +4,7 @@ page_id: plumbing
 title: Plumbing
 description: Regardless if you require our aid or not, we shall always cheerfully do all in our power to serve you promptly.
 images: 
-  - plumbing/plumbing_one.JPG
+  - plumbing.png
 ---
 * Free Estimates
 * Drain Snaking
