--- a/_posts/2012-12-01-welding.md
+++ b/_posts/2012-12-01-welding.md
@@ -2,9 +2,9 @@
 layout: page
 page_id: welding
 title: Welding
-description: Give us the plans, detailed drawings, or a general picture and we will help create your vision.
+description: Give us the plans, detailed drawings, or a general picture of your idea and we will help create your vision.
 images: 
-  - welding/welding.JPG
+  - welding.png
 ---
 * Mig Welding with Argon Gas
 * Clean Welds and Joints
